update GET /api/v1/feeds/ response data
